# ozon-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  FEATURES.md  README.md  opencode.jsonc  package.json  release.sh
docs/: ANTI_BOT_SOLUTIONS.md  RUST_MIGRATION_PLAN.md
extensions/: build-chrome.js  build-edge.js  build-firefox.js  build-opera.js
extensions/chrome/: README.md  build-info.json  manifest.json  package-lock.json  package.json
extensions/chrome/shared/connection/: websocket.js
extensions/chrome/shared/handlers/: tabs.js
extensions/chrome/shared/popup/: popup.js
extensions/chrome/src/: background-module.js  content-script.js  stealth-inject.js
extensions/edge/: manifest.json
extensions/firefox/: manifest.json
extensions/firefox/src/: background-module.js
extensions/opera/: manifest.json
scripts/: build_prod.sh
selectors/: README.md  ozon-selectors.json
server/: cli.js  index.js  package-lock.json  package.json
server/src/: extensionServer.js  ozonHandler.js  transport.js  unifiedBackend.js
src/: app.rs  browser_handler.rs  config.rs  extension_server.rs  file_logger.rs  lib.rs  main.rs  ownership_arbiter.rs  ozon_handler.rs  tool_catalog.rs  tool_result.rs  transport.rs  unified_backend.rs
stories/: 01-stable-selectors.md  02-listing-data-extractor.md  03-pdp-data-extractor.md  04-state-monitor.md
